Add LinkedIn preview image and Open Graph tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fortress 2.0 - Multi-Strategy Quantitative Trading Framework analyzing 41 AI/Tech stocks">
-    <meta property="og:title" content="Fortress 2.0 Trading Framework">
-    <meta property="og:description" content="Interactive dashboard: 3 systematic strategies backtested across 41 AI/Tech stocks (2022-2024)">
+
+    <!-- Open Graph / LinkedIn -->
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ngrief.github.io/AITester/">
+    <meta property="og:title" content="Fortress 2.0 - Multi-Strategy Trading Framework">
+    <meta property="og:description" content="Interactive dashboard: 3 systematic strategies backtested across 41 AI/Tech stocks (2022-2024). Built with VectorBT & Python.">
+    <meta property="og:image" content="https://ngrief.github.io/AITester/preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ngrief.github.io/AITester/">
+    <meta name="twitter:title" content="Fortress 2.0 - Multi-Strategy Trading Framework">
+    <meta name="twitter:description" content="Interactive dashboard: 3 systematic strategies backtested across 41 AI/Tech stocks (2022-2024)">
+    <meta name="twitter:image" content="https://ngrief.github.io/AITester/preview.png">
+
     <title>Fortress 2.0 - Multi-Strategy Trading Framework</title>
     <style>
         body {
